[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/ui/status_bars/health_bar_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/ui/status_bars/health_bar.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/player_interface/player_health.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ui/icons/health_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/ThaleahFat.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/objects/power_ups/modificators.gd" type="Script" id=6]
[ext_resource path="res://assets/resources/fonts/dynamic_font.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[node name="player_health" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 15.0
margin_right = 138.0
margin_bottom = 23.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="Sprite" type="TextureRect" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 132.0
margin_bottom = 32.0

[node name="placeholder" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 96.0
rect_min_size = Vector2( 15, 0 )

[node name="healthbar" type="TextureProgress" parent="HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 96.0
margin_bottom = 12.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/healthbar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -4.45
margin_right = 97.0
margin_bottom = 23.55
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 1 )
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 96.0
margin_bottom = 16.0
script = ExtResource( 6 )

[node name="item1" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]

[node name="item2" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 4.0

[node name="item3" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_right = 8.0

[node name="item4" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 12.0

[node name="item5" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 16.0

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 50.0
margin_bottom = 115.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 7 )
text = "FPS"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
